Bug 342629 - should take on accelator of ktouchpadenabler
Summary: should take on accelator of ktouchpadenabler
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: 5.17.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2015-01-08 14:42 UTC by Jonathan Riddell
Modified: 2020-01-22 21:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Take over global shortcut keys for touchpad enable/disable/toggle and fix dataengine (4.03 KB, patch)
2015-01-11 21:09 UTC, Rajeesh K V
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2015-01-08 14:42:38 UTC
ktouchpadenabler is currently the kded in plasma which by default listens for the touchpad enable shortcut and enables/disables it when it is pressed.  kcm-touchpad overlaps with the functionality somewhat and it should take on the feature of ktouchpadenabler so we can drop ktouchpadenabler


Reproducible: Always
Comment 1 Rajeesh K V 2015-01-11 21:09:53 UTC
Created attachment 90361 [details]
Take over global shortcut keys for touchpad enable/disable/toggle and fix dataengine

Here's a patch that takes over global shortcuts for touchpad enable/disable/toggle. It also fixes the applet to use correct plasma components and installing/loading the dataengine.

There's one issue - I couldn't find a replacement to PlasmaCore.ToolTip to port the applet to Plasma2. I couldn't test it either in Fedora 21 as the dataengine doesn't seem to work in my system (not only touchpad dataengine but many others are not working). Please test and check if things work,
Comment 2 Lukáš Tinkl 2015-01-22 17:08:43 UTC
FWIW, unwary of this BR, I fixed the above problems today (except the keyboard shortcuts):
http://commits.kde.org/kcm-touchpad/7494875a95ccfacc407eb0278f8c1deb71b2b949
Comment 3 Rajeesh K V 2015-01-22 19:10:58 UTC
@Lukas - thanks, but it breaks the build due to
kcoreaddons_desktop_to_json(plasma_engine_touchpad ${CMAKE_CURRENT_BINARY_DIR}/plasma-dataengine-touchpad.desktop)

Shouldn't that be ${CMAKE_CURRENT_SOURCE_DIR} ?
Comment 4 Lukáš Tinkl 2015-01-22 23:26:15 UTC
Nope, the resulting plasma-dataengine-touchpad.desktop is generated at build time using the configure_file() cmake macro
Comment 5 Rajeesh K V 2015-01-25 08:25:21 UTC
Right, that indeed fixes the build issue for me. Thanks!
Comment 6 Jonathan Riddell 2015-01-26 11:53:20 UTC
Should this report be closed?  Should we remove ktouchpadenabler ?
Comment 7 Rajeesh K V 2015-01-26 13:16:34 UTC
No, the keyboard shortcuts are not incorporated.  I saw a commit from Weng Xuetian making certain changes in that area 2 days ago.
Guess I'd need to rework this patch, and may post it in reviewboard instead once I find some time.
Comment 8 Rajeesh K V 2015-01-29 23:08:24 UTC
Review Request #122319 created for this. I'd appreciate review.
Comment 9 Lukáš Tinkl 2015-01-29 23:15:24 UTC
Git commit 91786b418e718639fd044a8f2feae80acd8eb267 by Lukáš Tinkl.
Committed on 29/01/2015 at 23:12.
Pushed by lukas into branch 'master'.

Set global shortcuts for touchpad enable/disable/toggle

Patch by: Rajeesh K Nambiar
with minor modifications to let it compile :)

REVIEW: 122319

M  +13   -1    src/kded/kdedactions.cpp

http://commits.kde.org/kcm-touchpad/91786b418e718639fd044a8f2feae80acd8eb267