Set global shortcuts for touchpad enable/disable/toggle

Patch by: Rajeesh K Nambiar
with minor modifications to let it compile :)

REVIEW: 122319
BUG: 342629